<resources>
    <string name="app_name">Exemplo Pix</string>
    <string name="pix">Pix</string>
    <string name="info_button">info button</string>
    <string name="back_button">back_button</string>
    <string name="saldo_limite">Saldo + Limite</string>
    <string name="toque_para_vizualizar">Toque para vizualizar</string>
    <string name="txtv_valor_transferencia">Digite o valor da \ntransferência</string>
    <string name="proximo">Próximo</string>
    <string name="r_10000_00">R$ 10.000,00</string>
    <string name="r">R$</string>
    <string name="voc_chegou_no_fragment_d_vidas">Você chegou no fragment dúvidas</string>
    <string name="r_0_00"><![CDATA[R$ 0,00]]></string>
    <string name="r_500"><![CDATA[R$ 500,00]]></string>
    <string name="duvida_dialog">Tem alguma dúvida?</string>
    <string name="duvida">Dúvida?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="dialog_info">"Você deseja mesmo sair?"</string>
    <string name="duvidas">Dúvidas?</string>
    <string name="digite_aqui_um_texto_qualquer">Digite aqui um texto qualquer!</string>
    <string name="transferir">Transferir</string>
    <string name="digite_a_chave_do_recebedor">Digite a chave do \nrecebedor</string>
    <string name="chave_pix">Chave Pix</string>
    <string name="edittext_chavepix">CPF/CNPJ, Celular, E-mail ou Chave Aleatória</string>
    <string name="pix_manual">Pix manual</string>
    <string name="pixmanualtext">Realize transferência Pix utilizando banco,\nagência, conta e dados do recebedor</string>
    <string name="favoritos">Favoritos</string>
    <string name="buscar">Buscar</string>
    <string name="nome_do_usuario">Nome do usuario</string>
    <string name="close">close</string>
    <string name="cifrão">R$</string>
    <string name="_500">500,00</string>
    <string name="_27_11_2021">27/11/2021</string>
    <string name="descri_o_opcional">Descrição (opcional)</string>
    <string name="instutui_o_financeira">Instutuição Financeira</string>
    <string name="agencia">Agência (sem o dígito)</string>
    <string name="conta">Conta (sem o dígito)</string>
    <string name="tipo_de_conta">Tipo de conta</string>
    <string name="titularidade">Titularidade</string>
    <string name="nome">Nome</string>
    <string name="cpf_cnpj">CPF/CNPJ</string>
    <string name="adicionar_aos_favoritos">Adicionar aos favoritos</string>
    <string name="descricaoedt">Pix para pagamento da escola</string>
    <string name="bancoabc">Banco ABC Brasil S.A.</string>
    <string name="_1234">1234</string>
    <string name="_5678">5678</string>
    <string name="conta_corrente">Conta corrente</string>
    <string name="diferente_titularidade">Diferente titularidade</string>
    <string name="nome_do_benefici_rio">Nome do beneficiário</string>
    <string name="_123_456_789_10">123.456.789-10</string>
    <string name="nenhum_selecionado">Nenhum selecionado</string>
    <string name="fechar">Fechar</string>
    <string name="_260_nubank">260 - Nubank</string>
    <string name="_270_sicredi">270 - Sicredi</string>
    <string name="ita">300 - Itaú</string>
    <string name="poupan_a">Poupança</string>
    <string name="corrente">Corrente</string>
    <string name="salario">Salario</string>
</resources>