<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="vm"
            type="br.com.android.exemplopix.BottomSheetFinanceiroViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingStart="@dimen/margin10dp"
                android:text="@string/instutui_o_financeira"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/fechar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin10dp"
                android:gravity="center_horizontal"
                android:onClick="@{() -> vm.closeDialog()}"
                android:text="@string/fechar"
                android:textColor="@color/white"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nubank"
            android:onClick="@{() -> vm.setupNubankClick()}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_view"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingStart="@dimen/margin10dp"
                android:paddingTop="@dimen/margin10dp"
                android:text="@string/_260_nubank"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkNubank"
                style="@style/CustomCheckBox"
                android:checked="@{vm.checkNubank}"
                android:clickable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sicred"
            android:onClick="@{() -> vm.setupSicrediClick()}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_view"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingStart="@dimen/margin10dp"
                android:paddingTop="@dimen/margin10dp"
                android:text="@string/_270_sicredi"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkSicred"
                style="@style/CustomCheckBox"
                android:checked="@{vm.checkSicredi}"
                android:clickable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/itau"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> vm.setupItauClick()}"
            android:background="@drawable/border_view"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingStart="@dimen/margin10dp"
                android:paddingTop="@dimen/margin10dp"
                android:text="@string/ita"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkItau"
                style="@style/CustomCheckBox"
                android:checked="@{vm.checkItau}"
                android:clickable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

</layout>