<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="vm"
            type="br.com.android.exemplopix.BottomSheetTypeCViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:paddingStart="@dimen/spacing_10"
                android:text="@string/tipo_de_conta"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/fechar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="@dimen/spacing_10"
                android:gravity="center_horizontal"
                android:onClick="@{() -> vm.closeDialog()}"
                android:text="@string/fechar"
                android:textColor="@color/white"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/corrente"
            android:onClick="@{() -> vm.setupCorrenteClick()}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_view"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingStart="30sp"
                android:paddingTop="@dimen/spacing_10"
                android:text="@string/corrente"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkCorrente"
                style="@style/CustomCheckBox"
                android:checked="@{vm.checkCorrente}"
                android:clickable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/salario"
            android:onClick="@{() -> vm.setupSalarioClick()}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_view"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingStart="30sp"
                android:paddingTop="@dimen/spacing_10"
                android:text="@string/salario"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkSalario"
                style="@style/CustomCheckBox"
                android:checked="@{vm.checkSalario}"
                android:clickable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/poupanca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> vm.setupPoupancaClick()}"
            android:background="@drawable/border_view"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingStart="30sp"
                android:paddingTop="@dimen/spacing_10"
                android:text="@string/poupan_a"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkPoupanca"
                style="@style/CustomCheckBox"
                android:checked="@{vm.checkPoupanca}"
                android:clickable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

</layout>