<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="vm"
            type="br.com.android.exemplopix.BotSheetTitularidadeViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:paddingStart="@dimen/spacing_10"
                android:text="@string/titularidade"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/fechar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_10"
                android:layout_marginEnd="30dp"
                android:gravity="center_horizontal"
                android:onClick="@{() -> vm.closeDialog()}"
                android:text="@string/fechar"
                android:textColor="@color/white"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_view"
            android:onClick="@{() -> vm.setupClickYes()}"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingStart="30sp"
                android:paddingTop="@dimen/spacing_10"
                android:text="@string/sim"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkYes"
                style="@style/CustomCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{vm.checkYes}"
                android:clickable="false" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_view"
            android:onClick="@{() -> vm.setupClickNo()}"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingStart="30sp"
                android:gravity="center_horizontal"
                android:paddingTop="@dimen/spacing_10"
                android:text="@string/nao"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkNo"
                style="@style/CustomCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{vm.checkNo}"
                android:clickable="false" />
        </LinearLayout>
    </LinearLayout>
</layout>